objects/alm_pm2__Deployment_Attempt__c.object
<CustomObject>
 <fullName>alm_pm2__Deployment_Attempt__c</fullName>
 <fields>
  <fullName>alm_pm2__Assemble_Request_Error__c</fullName>
  <label>Assemble Request Error</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Build__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Build</label>
  <referenceTo>alm_pm2__Build__c</referenceTo>
  <relationshipName>Deployment_Attempts</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Deployment__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Deployment</label>
  <referenceTo>alm_pm2__Deployment__c</referenceTo>
  <relationshipLabel>Deployment Attempts</relationshipLabel>
  <relationshipName>Deployment_Attempts</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>alm_pm2__End_Date__c</fullName>
  <label>End Date</label>
  <type>DateTime</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Is_Quick_Deploy__c</fullName>
  <defaultValue>false</defaultValue>
  <label>Is Quick Deploy</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Is_Validation__c</fullName>
  <defaultValue>false</defaultValue>
  <label>Is Validation</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Number_Components_Deployed__c</fullName>
  <label>Number Components Deployed</label>
  <precision>5</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Number_Components_Errors__c</fullName>
  <label>Number Components Errors</label>
  <precision>6</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Number_Components_Total__c</fullName>
  <label>Number Components Total</label>
  <precision>5</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Number_Test_Errors__c</fullName>
  <label>Number Test Errors</label>
  <precision>6</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Number_Tests_Completed__c</fullName>
  <label>Number Tests Completed</label>
  <precision>6</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Number_Tests_Total__c</fullName>
  <label>Number Tests Total</label>
  <precision>6</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Release__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Release</label>
  <referenceTo>alm_pm2__Release__c</referenceTo>
  <relationshipLabel>Deployment Attempts</relationshipLabel>
  <relationshipName>Deployment_Attempts</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Run_Managed_Tests__c</fullName>
  <defaultValue>false</defaultValue>
  <label>Run Managed Tests</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Run_Tests__c</fullName>
  <defaultValue>false</defaultValue>
  <label>Run Tests</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>alm_pm2__SF_Deployment_Id__c</fullName>
  <label>SF Deployment Id</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Specified_Tests__c</fullName>
  <label>Specified Tests</label>
  <length>100000</length>
  <type>LongTextArea</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Start_Date__c</fullName>
  <label>Start Date</label>
  <type>DateTime</type>
 </fields>
 <fields>
  <fullName>alm_pm2__State_Detail__c</fullName>
  <label>State Detail</label>
  <length>2000</length>
  <type>LongTextArea</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
   <valueSetDefinition>
    <value>
     <fullName>Canceled</fullName>
    </value>
    <value>
     <fullName>Failed</fullName>
    </value>
    <value>
     <fullName>InProgress</fullName>
    </value>
    <value>
     <fullName>Pending</fullName>
    </value>
    <value>
     <fullName>Succeeded</fullName>
    </value>
   </valueSetDefinition>
  </valueSet>
 </fields>
 <fields>
  <fullName>alm_pm2__Target_Instance__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Target Instance</label>
  <referenceTo>alm_pm2__Instances__c</referenceTo>
  <relationshipLabel>Deployment Attempts</relationshipLabel>
  <relationshipName>Deployment_Attempts</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Test_Level__c</fullName>
  <label>Test Level</label>
  <type>Picklist</type>
  <valueSet>
   <valueSetDefinition>
    <value>
     <fullName>NoTestRun</fullName>
    </value>
    <value>
     <fullName>RunSpecifiedTests</fullName>
    </value>
    <value>
     <fullName>RunLocalTests</fullName>
    </value>
    <value>
     <fullName>RunAllTestsInOrg</fullName>
    </value>
   </valueSetDefinition>
  </valueSet>
 </fields>
 <fields>
  <fullName>alm_pm2__Total_Code_Coverage__c</fullName>
  <label>Total Code Coverage</label>
  <precision>18</precision>
  <scale>2</scale>
  <type>Percent</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Total_Lines_Not_Covered__c</fullName>
  <label>Total Lines Not Covered</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>alm_pm2__Total_Lines__c</fullName>
  <label>Total Lines</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
 </fields>
 <fields>
  <fullName>alm_pm2__UUID__c</fullName>
  <caseSensitive>true</caseSensitive>
  <externalId>true</externalId>
  <label>UUID</label>
  <length>255</length>
  <type>Text</type>
  <unique>true</unique>
 </fields>
 <label>Deployment Attempt</label>
 <nameField>
  <displayFormat>D-{0000}</displayFormat>
  <label>Deployment Attempt Name</label>
  <type>AutoNumber</type>
 </nameField>
 <pluralLabel>Deployment Attempts</pluralLabel>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>